--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&amp;family=Roboto:wght@400;500;700&amp;display=swap"
     rel="stylesheet">
+  <link rel='stylesheet'
+    href='https://chinese-fonts-cdn.deno.dev/packages/hwmct/dist/%E6%B1%87%E6%96%87%E6%98%8E%E6%9C%9D%E4%BD%93/result.css' />
   <title>modernization-2048</title>
 </head>
 
